[project]
name = 'nahash'
version = '0.0.2'
description = 'A library for communicating with iMessage'
readme = 'README.md'
requires-python = '>=3.7'
authors = [{name='John Wiggins', email='jwiggins@enthought.com'}]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries',
    'Operating System :: MacOS',
]

[project.urls]
source = 'https://github.com/jwiggins/nahash'

[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'
